# ergonomics-assessment

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  LICENSE  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py  factory.py  security.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/assessments/: __init__.py  forms.py  routes.py
app/blueprints/auth/: __init__.py  forms.py  routes.py
app/blueprints/jobs/: __init__.py  forms.py  routes.py
app/blueprints/media/: __init__.py  annotate.js  routes.py
app/blueprints/org/: __init__.py  forms.py  routes.py
app/models/: __init__.py  ergo.py  media.py  org.py  user.py
app/ocr/: adapter.py
app/scoring/: __init__.py  niosh.py  rula_reba.py
app/services/: exports.py  pdf.py  reports.py
app/static/: styles.css
app/templates/: base.html
app/templates/assessments/: list.html  new.html  print.html  view.html
app/templates/auth/: login.html  register.html
app/templates/errors/: 403.html
app/templates/jobs/: jobrole_form.html
app/templates/media/: annotate.html
app/templates/org/: company_form.html  dashboard.html
tests/: conftest.py  requirements.txt  test_app_factory.py  test_assessments_routes.py  test_auth.py  test_blueprint_sweeps.py  test_media_routes.py  test_scoring.py  test_scoring_reba.py  test_scoring_rula.py  test_smoke.py  test_smoke_post.py
