[project]
name = "ergonomics-assessment"
version = "0.1.0"
requires-python = ">=3.12"
description = "Flask ergonomics assessment app"
readme = "README.md"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "build", "dist", ".mypy_cache", ".pytest_cache"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov-report=term-missing --no-cov-on-fail --cov-fail-under=60"
filterwarnings = ["ignore:ast.NameConstant is deprecated:DeprecationWarning:reportlab"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
  "app/ocr/*",
  "app/**/migrations/*",
  "app/**/cli*.py",
  "app/**/__main__.py",
  "app/services/pdf.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
packages = ["app"]
ignore_missing_imports = true
strict = false
